--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -21,14 +21,14 @@ jobs:
 
       - name: Ping the site
         run: |
-              pingSite=$(curl -Is https://pw-11043-save-project-ve.picsartstage2.com | head -1)
-             
-              echo 'pingSite Unparsed:'$pingSite
+        
+              siteURL='https://'${{ env.BRANCH_NAME }}'.com'
+              echo 'siteURL:' $siteURL
+              #pingSite=$(curl -Is https://pw-11043-save-project-ve.picsartstage2.com | head -1)
+                      
              
               pingSite=$(echo $pingSite | xargs)
-              
-              echo 'pingSite:'$pingSite | xargs
-              
+
               if [[ "$pingSite" == "HTTP/2 200" ]]; then
                 echo 'site is accessible'
               else
