--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Ping the site
         run: |
         
-              siteURL='https://${{ env.BRANCH_NAME }}.com'
+              branchName='www.google'
+              siteURL='https://$branchName.com'
               echo 'siteURL:' $siteURL
               #pingSite=$(curl -Is https://pw-11043-save-project-ve.picsartstage2.com | head -1)
                       
