--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Ping the site
         run: |
         
-              branchName='www.google'
-              siteURL='https://$branchName.com'
+              branchNameInside='www.google'
+              siteURL='https://${branchNameInside}.com'
               echo 'siteURL:' $siteURL
               #pingSite=$(curl -Is https://pw-11043-save-project-ve.picsartstage2.com | head -1)
                       
