--- a/.github/workflows/video-automation.yml
+++ b/.github/workflows/video-automation.yml
@@ -25,7 +25,7 @@ jobs:
               branchNameInside='www.google'
               siteURL="https://${branchNameInside}.com"
               echo 'siteURL:' $siteURL
-              #pingSite=$(curl -Is https://pw-11043-save-project-ve.picsartstage2.com | head -1)
+              pingSite=$(curl -Is $siteURL | head -1)
                       
              
               pingSite=$(echo $pingSite | xargs)
