--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -26,7 +26,25 @@ jobs:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-               
+          
+      
+      - name: Find in commit messages
+        id: find
+        uses: atlassian/gajira-find-issue-key@master
+        with:
+          string: "$GITHUB_PR_TITLE ${{ github.head_ref }} ${{ github.event.head_commit.message }}"
+          from: "" 
+          
+      - name: Checking the issue
+        if: steps.find.outputs.issue == ''
+        uses: mshick/add-pr-comment@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+        with:
+          message: ":red_circle: **Can not find the issue in JIRA**"     
+          
+          
+          
       - name: Extract Jira Issue Key
         if: github.event.pull_request.draft == false
         run:  |
