--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -50,7 +50,7 @@ jobs:
         run:  |
                 
                 echo 'Entered title is:' $GITHUB_PR_TITLE
-                
+                echo 'commit: ' ${{ github.event.head_commit.message }}
                 
                 
                 if [[ $GITHUB_PR_TITLE =~ ^\[DT-[0-9]+\] ]]; then
