--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -52,9 +52,8 @@ jobs:
                 echo 'Entered title is:' $GITHUB_PR_TITLE
                 echo 'commit: ' ${{ github.event.head_commit.message }}
                 
-                outputPrevious=${{ steps.find.outputs.issue }}
-                echo 'outputPrevious: ' $outputPrevious
-                
+                echo 'outputPrevious: ' ${{ steps.find.outputs.issue }}
+
                 #if [[  == '' ]]; then
                 #fi
                 
