--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -12,7 +12,6 @@ on:
 env:
   GITHUB_PR_NUMBER: ${{ github.event.pull_request.number }}
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
-  GITHUB_PR_TITLE: ${{ github.event.pull_request.title }}
   
 jobs:
   Validate-2-PR-Title-2:
@@ -49,13 +48,12 @@ jobs:
         if: github.event.pull_request.draft == false
         run:  |
             
-                echo 'Entered title is:' $GITHUB_PR_TITLE
-                echo 'commit: ' ${{ github.event.head_commit.message }}
-                
-                echo 'outputPrevious: ' ${{ steps.find.outputs.issue }}
+                outputPrevious=${{ steps.find.outputs.issue }}
+                echo 'outputPrevious:' $outputPrevious
 
-                #if [[  == '' ]]; then
-                #fi
+                if [[ $outputPrevious -ne '' ]]; then
+                  echo 'issue exists'
+                fi
                 
                 
                 if [[ $GITHUB_PR_TITLE =~ ^\[DT-[0-9]+\] ]]; then
