--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -53,6 +53,19 @@ jobs:
 
                 if [[ $outputPrevious -ne '' ]]; then
                   echo 'issue exists'
+                  
+                  if [[ "${{ github.event.pull_request.title }}" =~ ^\[DT-[0-9]+\] ]]; then
+                  
+                    echo 'correct format'
+                  else
+                    echo 'incorrect'
+                    exit 1
+                  
+                  fi
+                  
+                  
+                else
+                  exit 1
                 fi
                 
                 
