--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -43,7 +43,7 @@ jobs:
           message: ":red_circle: **Cannot find a matching issue in Jira**"
           
       - name: Comment under PR in case issue does not exist
-        if: steps.find.outputs.issue <> ''
+        if: steps.find.outputs.issue != ''
         uses: mshick/add-pr-comment@v1
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
