--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -48,7 +48,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
         with:
-          message: "Jira Issue Link: ${{ env.JIRA_BASE_URL }}/${{ steps.find.outputs.issue }}"     
+          message: "Jira Issue Link: ${{ secrets.JIRA_BASE_URL }}/${{ steps.find.outputs.issue }}"     
           
           
           
@@ -56,7 +56,7 @@ jobs:
         if: github.event.pull_request.draft == false
         run:  |
             
-                echo 'base URL: ' ${{ env.JIRA_BASE_URL }}
+                echo 'base URL: ' ${{ secrets.JIRA_BASE_URL }}
                 outputPrevious=${{ steps.find.outputs.issue }}
                 echo 'outputPrevious:' $outputPrevious
 
