--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -47,6 +47,7 @@ jobs:
               fi                         
       
       - name: Assess the PR Reviewers Count
+        if: steps.find.outputs.issue != ''
         run:  |
                 
                 restApiGETGitHubReviewersDetails=$(curl \
