--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -86,7 +86,7 @@ jobs:
                 
                 
       - name: Jenkins Job
-        if: github.event.pull_request.base.ref == 'master' && env.CodeReviewDone == 'true'   
+        if: github.event.pull_request.base.ref == 'master' && env.CodeReviewDone == 'true' && steps.find.outputs.issue != ''
         run: |
                 echo 'heyyyyyy'
                 echo 'env: ' ${{ env.CodeReviewDone }}
