--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -69,3 +69,15 @@ jobs:
                 else
                   exit 1
                 fi
+
+
+      - name: Extract Jira Issue Key
+        if: github.event.pull_request.draft == false
+        run:  |
+        
+              curl -i \
+                -X POST \
+                -H "Accept: application/vnd.github.v3+json" \
+                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+                https://api.github.com/repos/naregkar/devAutoMerge/actions/workflows/11589975/dispatches \
+                -d '{"ref": "${{ github.ref }}" }'
