--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Extract Jira Issue Key
         if: github.event.pull_request.draft == false
         run:  |
+        
+              
                 
                 outputPrevious=${{ steps.find.outputs.issue }}
                 echo 'outputPrevious:' $outputPrevious
@@ -72,13 +74,19 @@ jobs:
                 fi
 
 
-      - name: Trigger workflow_dispatch
+      - name: Trigger to re-run
         if: github.event.pull_request.draft == false && steps.find.outputs.issue != ''
         run:  |
         
-              curl -i \
+               restApiGetLabels=$(curl \
+                                -H "Accept: application/vnd.github.v3+json" \
+                                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+                                https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
+                                
+               echo 'echo: ' $restApiGetLabels           
+                          
+               curl \
                 -X POST \
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
-                https://api.github.com/repos/naregkar/devAutoMerge/actions/workflows/11589975/dispatches \
-                -d '{"ref": "${{ github.head_ref }}" }'
+                https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/{{}}/rerun
