--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -83,10 +83,15 @@ jobs:
                                 -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
                                 https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
                                 
-               echo 'echo: ' $restApiGetLabels           
-                          
-               curl \
-                -X POST \
-                -H "Accept: application/vnd.github.v3+json" \
-                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
-                https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/{{}}/rerun
+               workflowIdExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
+               
+               echo 'workflowIdExtracted:' $workflowIdExtracted
+               workflowId=$(echo $workflowIdExtracted| cut -d':' -f 2)
+               echo 'workflowId:' $workflowId
+               
+               
+               #curl \
+               # -X POST \
+               # -H "Accept: application/vnd.github.v3+json" \
+               # -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+               # https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/$workflowId/rerun
