--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    
+      - name: title
+        run:  |
+                echo 'title: ' ${{ github.event.pull_request.title }}
       
       - name: Login to JIRA
         uses: atlassian/gajira-login@master
