--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -51,16 +51,16 @@ jobs:
         run: |
               restApiGetLabels=$(curl \
                                 -H "Accept: application/vnd.github.v3+json" \
-                                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+                                -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
                                 https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
                                 
                labelNameExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
                
                curl \
-                -X DELETE \
-                -H "Accept: application/vnd.github.v3+json" \
-                -H "Authorization: token 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" \
-                https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels/$labelNameExtracted
+                  -X DELETE \
+                  -H "Accept: application/vnd.github.v3+json" \
+                  -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
+                  https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels/$labelNameExtracted
       
       - name: Check if Jira issue Status is 'Code Review'
         if: steps.find.outputs.issue != ''
