--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -56,7 +56,7 @@ jobs:
                                 
                labelNameExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
                
-               if [ ! -z "$labelNameExtracted" ]; then
+               if [ "$labelNameExtracted" != "" ]; then
                
                   echo 'delete'
                   
