--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -95,3 +95,15 @@ jobs:
                 -H "Accept: application/vnd.github.v3+json" \
                 -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
                 https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/$workflowId/rerun
+
+  Transition-To-Code-Review:
+    runs-on: ubuntu-latest
+    needs: Validate-2-PR-Title-2
+    
+    steps:
+    
+      - name: test
+        run: |
+              echo 'inside job 2'
+
+
