--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -17,6 +17,9 @@ jobs:
   Validate-2-PR-Title-2:
     runs-on: ubuntu-latest
     
+    outputs:
+      outputIssueId: ${{ steps.find.outputs.issue }}
+    
     steps:
     
       - name: Login to JIRA
@@ -105,5 +108,6 @@ jobs:
       - name: test
         run: |
               echo 'inside job 2'
+              echo ${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}
 
 
