--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -62,7 +62,7 @@ jobs:
         if: github.event.pull_request.draft == false
         run:  |
         
-                echo 'github.event:' ${{ github.event }}
+                echo 'github.event:' ${{ github.event.action }}
                 
                 outputPrevious=${{ steps.find.outputs.issue }}
                 echo 'outputPrevious:' $outputPrevious
@@ -83,7 +83,7 @@ jobs:
 
 
       - name: Trigger to re-run
-        if: github.event.pull_request.draft == false && steps.find.outputs.issue != '' && github.event != 'opened'
+        if: github.event.pull_request.draft == false && steps.find.outputs.issue != '' && github.event.action != 'opened'
         run:  |
         
                restApiGetLabels=$(curl \
