--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -99,17 +99,22 @@ jobs:
                                 
                workflowIdExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
                
-               echo 'workflowIdExtracted:' $workflowIdExtracted
-               workflowId=$(echo $workflowIdExtracted| cut -d':' -f 2)
-               echo 'workflowId:' $workflowId
-               
-               
-               curl \
-                -X POST \
-                -H "Accept: application/vnd.github.v3+json" \
-                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
-                https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/$workflowId/rerun
+               if [ "$workflowIdExtracted" != "" ]; then
+                 echo 'workflowIdExtracted:' $workflowIdExtracted
+                 workflowId=$(echo $workflowIdExtracted| cut -d':' -f 2)
+                 echo 'workflowId:' $workflowId
 
+
+                 curl \
+                  -X POST \
+                  -H "Accept: application/vnd.github.v3+json" \
+                  -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+                  https://api.github.com/repos/naregkar/devAutoMerge/actions/runs/$workflowId/rerun
+               else
+                echo 'no re-run'
+               fi
+
+                             
   Transition-To-Code-Review:
     runs-on: ubuntu-latest
     needs: Validate-2-PR-Title-2
