--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -121,7 +121,8 @@ jobs:
     
     steps:
     
-      - name: test
+      - name: Change status to Code Review
+        if: github.event.pull_request.draft == false && needs.Validate-2-PR-Title-2.outputs.outputIssueId != '' && github.event_name != 'pull_request_review' && github.event.action != 'submitted'
         run: |
               echo 'inside job 2'
               echo ${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}
@@ -131,11 +132,11 @@ jobs:
                    -X POST --data '{"transition":{"id":"51"}}' \
                    -H "Content-Type: application/json" ${{ secrets.JIRA_BASE_URL }}/rest/api/3/issue/${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}/transitions
 
-      - name: Slack notification
-        env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_USERNAME: WebAutoMerger
-            SLACK_CHANNEL: general
-        uses: Ilshidur/action-slack@2.0.2
-        with:
-            args: "${{ github.event.pull_request.user.login }} opened a new PR: http://www.google.com  Please review."
+      #- name: Slack notification
+      #  env:
+      #      SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      #      SLACK_USERNAME: WebAutoMerger
+      #      SLACK_CHANNEL: general
+      #  uses: Ilshidur/action-slack@2.0.2
+      #  with:
+      #      args: "${{ github.event.pull_request.user.login }} opened a new PR: http://www.google.com  Please review."
