--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -121,6 +121,11 @@ jobs:
     
     steps:
     
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+    
       - name: Change status to Code Review
         if: github.event.pull_request.draft == false && needs.Validate-2-PR-Title-2.outputs.outputIssueId != '' && github.event_name != 'pull_request_review' && github.event.action != 'submitted'
         run: |
