--- a/.github/workflows/validate-pr-title2.yml
+++ b/.github/workflows/validate-pr-title2.yml
@@ -127,15 +127,25 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
     
       - name: Change status to Code Review
-        if: github.event.pull_request.draft == false && needs.Validate-2-PR-Title-2.outputs.outputIssueId != '' && github.event_name != 'pull_request_review' && github.event.action != 'submitted'
+        if: github.event.pull_request.draft == false && needs.Validate-2-PR-Title-2.outputs.outputIssueId != '' #&& github.event_name != 'pull_request_review' && github.event.action != 'submitted'
         run: |
               echo 'inside job 2'
               echo ${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}
               
-              #Change the Jira issue Status to QA Open
-              curl -D- -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
-                   -X POST --data '{"transition":{"id":"51"}}' \
-                   -H "Content-Type: application/json" ${{ secrets.JIRA_BASE_URL }}/rest/api/3/issue/${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}/transitions
+              restApiGetLabels=$(curl \
+                                -H "Accept: application/vnd.github.v3+json" \
+                                -H "Authorization: token ${{ secrets.TOKEN_GITHUB }}" \
+                                https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
+                                
+               workflowIdExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
+               
+               if [ "$workflowIdExtracted" == "" ]; then
+                  
+                  #Change the Jira issue Status to QA Open
+                  curl -D- -u ${{ secrets.JIRA_USER_EMAIL }}:${{ secrets.JIRA_API_TOKEN }} \
+                       -X POST --data '{"transition":{"id":"51"}}' \
+                       -H "Content-Type: application/json" ${{ secrets.JIRA_BASE_URL }}/rest/api/3/issue/${{ needs.Validate-2-PR-Title-2.outputs.outputIssueId }}/transitions
+               fi  
 
       #- name: Slack notification
       #  env:
