--- a/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
+++ b/.github/workflows/Manage-2-PR-2-Reviewers-2.yml
@@ -48,28 +48,28 @@ jobs:
                     
               exit 1       
       
-      - name: Remove re-run label
-        if: steps.find.outputs.issue != ''
-        run: |
-              restApiGetLabels=$(curl \
-                                -H "Accept: application/vnd.github.v3+json" \
-                                -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
-                                https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
-                                
-               labelNameExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
-               
-               if [ "$labelNameExtracted" != "" ]; then
-               
-                  echo 'delete'
-                  
-                  curl \
-                  -X DELETE \
-                  -H "Accept: application/vnd.github.v3+json" \
-                  -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
-                  https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels/$labelNameExtracted
-               else
-                  echo 'nothing to delete'
-               fi
+      #- name: Remove re-run label
+      #  if: steps.find.outputs.issue != ''
+      #  run: |
+      #        restApiGetLabels=$(curl \
+      #                          -H "Accept: application/vnd.github.v3+json" \
+      #                          -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
+      #                          https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels)
+      #                          
+      #         labelNameExtracted=$(echo $restApiGetLabels | jq -r '.[] | select(.name | contains("ReviwerWorkflowId")) | .name');           
+      #         
+      #         if [ "$labelNameExtracted" != "" ]; then
+      #         
+      #            echo 'delete'
+      #            
+      #            curl \
+      #            -X DELETE \
+      #            -H "Accept: application/vnd.github.v3+json" \
+      #            -H 'authorization: token ${{ secrets.TOKEN_GITHUB }}' \
+      #            https://api.github.com/repos/naregkar/devAutoMerge/issues/$GITHUB_PR_NUMBER/labels/$labelNameExtracted
+      #         else
+      #            echo 'nothing to delete'
+      #         fi
                     
       - name: Check if Jira issue Status is 'Code Review'
         if: steps.find.outputs.issue != ''
